# diemPy

./: pyproject.toml
docs/: api.md  core-classes.md  key-features.md
src/diempy/: __init__.py  contigs.py  io.py  plots.py  polarize.py  tests.py  utils.py
