[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diempy"
version = "1.0.4"
authors = [
  { name="Derek Setter", email="derek.setter@gmail.com" },
  { name = "Stuart J.E. Baird"}
]
description = "Polarize genomes using diem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0,<=2.3",
    "pandas>=1.3.0", 
    "numba>=0.56.0",
    "matplotlib>=3.4.0",
    "docopt>=0.6.2",
    "scikit-allel>=1.3.0",
    "joblib>=1.5.3",
    "ipympl>=0.10.0",
    "pysam>=0.23.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.scripts]
vcf2diem = "diempy.vcf2diembeds:main"
diem2fasta = "diempy.diem2fasta:main"